--- a/FrontEndAuth/frontend/.env
+++ b/FrontEndAuth/frontend/.env
@@ -1,1 +1,3 @@
 VUE_APP_REMOTE_API=http://localhost:8080/AuthenticationApplication
+MOVIE_DB_API=http://api.themoviedb.org/3
+MOVIE_DB_KEY=8d04c38ec89333dce4c70f77712eb41d
