--- a/FrontEndAuth/java/pom.xml
+++ b/FrontEndAuth/java/pom.xml
@@ -54,11 +54,11 @@
 			<version>4.2.5.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
   			<groupId>com.twilio.sdk</groupId>
   			<artifactId>twilio</artifactId>
   			<version>7.37.2</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
